ligolang/src/test/contracts/negative/linearity.mligo
type foofoo = {foo : string; foo : int}
let foofoo : foofoo = {foo = "foo"; foo = 1}